# models/usermodel.go
@@ -1,0 +1,7 @@
+package models
+
+type User struct {
+	Id       string `json:"id"`
+	Name     string `json:"name"`
+	Password string `json:"-"`
+}
